# DesktopPet

./: .gitignore  AGENTS.md  CMakeLists.txt  Desktop.rc  README.md  Struct.h  adddialog.cpp  form.cpp  main.cpp  mainwindow.cpp  notes.md
config/: eventlist.ini
core/: config_store.cpp  config_store.h  event.h  event_repository.cpp  event_repository.h  qsettings_adapter.cpp  qsettings_adapter.h  settings_interface.h
docs/superpowers/plans/: 2026-06-22-qml-refactor-plan.md
docs/superpowers/specs/: 2026-06-22-qml-refactor-design.md
qml/: AddDialog.qml  PetWindow.qml  TaskListDialog.qml  TaskListItem.qml  Theme.qml  main.qml
services/: update_service.cpp  update_service.h
ui/: add_dialog.cpp  add_dialog.h  adddialog.h  adddialog.ui  application_controller.cpp  application_controller.h  form.h  form.ui  main_window.cpp  main_window.h  main_window.ui  mainwindow.cpp  mainwindow.h  task_list_dialog.cpp  task_list_dialog.h  task_list_dialog.ui  task_list_model.cpp  task_list_model.h
